fix styling issues on mobile

--- a/src/app/core/pages/history/history.component.scss
+++ b/src/app/core/pages/history/history.component.scss
@@ -8,4 +8,5 @@
 .history-entry {
   padding: 20px;
   width: 30%;
+  min-width: 350px;
 }
