--- a/src/app/core/pages/today/today.component.scss
+++ b/src/app/core/pages/today/today.component.scss
@@ -6,6 +6,7 @@
 
   padding-top: 35px;
   padding-bottom: 30px;
+
 }
 
 .main-cluster {
@@ -15,6 +16,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 60%;
+  min-width: 350px;
 
   gap: 70px;
 }
